[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/PlayerSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Shaders/SynthwaveParticle.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Forward",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Backward",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": false,
"name": "Dead",
"speed": 0.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
} ]

[sub_resource type="NoiseTexture" id=16]
width = 12
height = 4

[sub_resource type="CapsuleShape2D" id=17]
radius = 12.0
height = 32.0

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Shoot",
"speed": 60.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
rotation = 1.5708
z_index = 1
collision_layer = 5

[node name="Player_Sprite" type="AnimatedSprite" parent="KinematicBody2D"]
rotation = -1.5708
scale = Vector2( 2, 2 )
frames = SubResource( 15 )
animation = "Idle"
playing = true

[node name="Shadow" type="Sprite" parent="KinematicBody2D/Player_Sprite"]
show_behind_parent = true
position = Vector2( -5.61098e-05, 15.5 )
texture = SubResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 4, 0 )
rotation = 1.5708
shape = SubResource( 17 )

[node name="Camera" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 16, 0 )
current = true
zoom = Vector2( 0.6, 0.6 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="AimPivot" type="Node2D" parent="KinematicBody2D"]
position = Vector2( -8, 4 )
rotation = -1.5708
script = ExtResource( 3 )

[node name="Arms" type="AnimatedSprite" parent="KinematicBody2D/AimPivot"]
position = Vector2( 20, 8 )
scale = Vector2( 2, 2 )
z_index = 1
frames = SubResource( 23 )
animation = "Normal"
playing = true

[node name="Muzzle" type="Node2D" parent="KinematicBody2D/AimPivot"]
position = Vector2( 40, -3 )

[node name="SynthwaveParticle" parent="KinematicBody2D/AimPivot/Muzzle" instance=ExtResource( 4 )]
rotation = 3.79492e-13
emitting = false
lifetime = 0.5

[node name="DirectRay" type="RayCast2D" parent="KinematicBody2D/AimPivot/Muzzle"]
position = Vector2( -16, 0 )
cast_to = Vector2( 120, 0 )
collision_mask = 2

[node name="SmoothRay" type="RayCast2D" parent="KinematicBody2D/AimPivot/Muzzle"]
position = Vector2( -16, 0 )
cast_to = Vector2( 220, 0 )
collision_mask = 2

[node name="Label" type="Label" parent="KinematicBody2D"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -40.0
margin_right = 10.0
margin_bottom = 14.0
rect_rotation = -90.0
text = "HP: 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gain_health" from="." to="." method="_on_Player_gain_health"]
[connection signal="lose_health" from="." to="." method="_on_Player_lose_health"]
[connection signal="IsFiring" from="KinematicBody2D/AimPivot" to="." method="_on_AimPivot_IsFiring"]
[connection signal="IsNotFiring" from="KinematicBody2D/AimPivot" to="." method="_on_AimPivot_IsNotFiring"]
